--- a/README
+++ b/README
@@ -1,1 +1,24 @@
 wow addon pack
+
+!GomuActionbarSwitch
+
+save / load actionbar buttons
+
+!GomuBindingSwitch
+
+save / load keybindings
+
+!GomuEventHandler
+
+* auto-release in battle ground
+* horseman's infamous laughter notifies u when the random dungeon is ready
+
+!GomuNotepad
+
+* notepad
+* calc
+
+!GomuRandomMount
+
+summon random mount
+
